Fix: Root height overflow on mobile screens
Convert root height to a min-height and convert from 100vh to 100dvh to offset built-in browser features from altering vh.

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,5 @@
 #root {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100dvh;
 }
-
-/* main {
-    padding: 0 50px;
-}  */
